# typesafe_derive_builder_rs

./: Cargo.toml
typesafe_derive_builder/: Cargo.toml
typesafe_derive_builder/src/: lib.rs  tests.rs
typesafe_derive_builder_core/: Cargo.toml
typesafe_derive_builder_core/src/: lib.rs
typesafe_derive_builder_macro/: Cargo.toml
typesafe_derive_builder_macro/src/: lib.rs
