[package]
authors = ["mijinko17 <kougouseikeidansi@gmail.com>"]
edition = "2018"
name = "typesafe_derive_builder_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["derive"]}
