[package]
authors = ["mijinko17 <kougouseikeidansi@gmail.com>"]
edition = "2018"
name = "typesafe_derive_builder_macro"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["derive"]}
typesafe_derive_builder_core = {path = "../typesafe_derive_builder_core"}
